--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
                     <a href="#">contact</a>
                 </nav>
             </header>
+            <div class="slider">
+                <div class="slide-left">
+                    <img src="./images/icon-angle-left.svg" alt="">
+                </div>
+                <div class="slide-right">
+                    <img src="./images/icon-angle-right.svg" alt="">
+                </div>
+            </div>
         </div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
