solved accessibility issues

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             </header>
             <div class="slider">
                 <div class="slide-left">
-                    <button><img src="./images/icon-angle-left.svg" alt="" class="nb"></button>
+                    <button aria-label="slide-left"><img src="./images/icon-angle-left.svg" alt="left"></button>
                 </div>
                 <div class="slide-right">
-                    <button><img src="./images/icon-angle-right.svg" alt="" class="nb"></button>
+                    <button aria-label="slide-right"><img src="./images/icon-angle-right.svg" alt="right"></button>
                 </div>
             </div>
         </div>
